--- a/assets/css/business-frontpage.css
+++ b/assets/css/business-frontpage.css
@@ -29,8 +29,8 @@ body {
     position: relative;
     top:10px;
     right:20px;
-    height:360px;
-    width:475px;
+    height:375px;
+    width:500px;
     float:left;
     padding:5px;
     margin: 5px;
@@ -46,7 +46,7 @@ body {
 }
 .business-header p{
     position: relative;
-    top:275px;
+    bottom:100px;
     left:0;
     font-size: 15px;
     float:center;
@@ -77,8 +77,8 @@ footer {
         position:relative;
         width:275px;
         height:200px;
-        top:20px;
-        
+        bottom:200px;
+        left:0px;
         
     }
 }
@@ -93,15 +93,20 @@ footer {
         font-size: 15px;
     }
     .business-header img{
-        float:right;
-        position:absolute;
-        width:125px;
-        height:90px;
-        top:0;
-        right:-5px;
-        
+        float:left;
+        position:relative;
+        width:355px;
+        height:290px;
+         display: block; 
+         margin-left: auto; 
+         margin-right: auto;
     }
     .business-header {
     height: 275px;
+    }
+    .btn{
+        position:relative;
+        padding: 2px;
+        border:2px;
     }
 }
